santa clara two by two notebook updates

--- a/pyei/examples/santa_clara_demo.ipynb
+++ b/pyei/examples/santa_clara_demo.ipynb
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1694,8 +1694,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='9844' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      98.44% [9844/10000 42:07<00:40 Sampling 4 chains, 370 divergences]\n",
+       "      <progress value='10000' class='' max='10000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [10000/10000 43:39<00:00 Sampling 4 chains, 370 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -1705,6 +1705,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 1_500 tune and 1_000 draw iterations (6_000 + 4_000 draws total) took 2641 seconds.\n",
+      "There were 63 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "There were 44 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "The chain reached the maximum tree depth. Increase max_treedepth, increase target_accept or reparameterize.\n",
+      "There were 121 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "There were 142 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: wakefield_normal\n",
+      "        Computed from the raw b_i samples by multiplying by population and then getting\n",
+      "        the proportion of the total pop (total pop=summed across all districts):\n",
+      "        The posterior mean for the district-level voting preference of\n",
+      "        e_asian for Hardy is\n",
+      "        0.442\n",
+      "        The posterior mean for the district-level voting preference of\n",
+      "        non-e_asian for Hardy is\n",
+      "        0.313\n",
+      "        95% equal-tailed Bayesian credible interval for district-level voting preference of\n",
+      "        e_asian for Hardy is\n",
+      "        [0.28056275 0.5388811 ]\n",
+      "        95% equal-tailed Bayesian credible interval for district-level voting preference of\n",
+      "        non-e_asian for Hardy is\n",
+      "        [0.29397973 0.34272067]\n",
+      "        \n"
+     ]
     }
    ],
    "source": [
