acknowledgements update, citations

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -104,6 +104,13 @@ Estimates},
     note = {R package version 0.2-1},
     url = {https://CRAN.R-project.org/package=eiPack},
   }
+  
+  @book{elliot2000spatial,
+  title={Spatial epidemiology: methods and applications.},
+  author={Elliot, Paul and Wakefield, Jon C and Best, Nicola G and Briggs, David John and others},
+  year={2000},
+  publisher={Oxford University Press}
+}
     
     @Manual{RxCEcolInf,
     title = {RxCEcolInf: 'R x C Ecological Inference With Optional Incorporation of
@@ -140,5 +147,7 @@ Survey Information'},
   pages={2},
   year={2011}
 }
+
+
     
     
