--- a/pyei/intro_notebooks/PyEI_overview.ipynb
+++ b/pyei/intro_notebooks/PyEI_overview.ipynb
@@ -35,10 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "moral-baker",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.configdefaults): install mkl with `conda install mkl-service`: No module named 'mkl'\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dietary-crossing",
    "metadata": {},
    "outputs": [
@@ -289,7 +297,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "renewable-industry",
    "metadata": {},
    "outputs": [],
@@ -362,7 +370,7 @@
      "text": [
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
-      "Multiprocess sampling (2 chains in 2 jobs)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
       "NUTS: [b_2, b_1, kappa_2, phi_2, kappa_1, phi_1]\n"
      ]
     },
@@ -383,8 +391,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='7089' class='' max='8400' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      84.39% [7089/8400 01:58<00:21 Sampling 2 chains, 6 divergences]\n",
+       "      <progress value='8717' class='' max='16800' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      51.89% [8717/16800 00:20<00:19 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -1415,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
