--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -8,6 +8,7 @@
 }
 
 @article{greiner2009r,
+  doi={10.1111/j.1467-985X.2008.00551.x},
   title={{R}$\times$ {C} ecological inference: bounds, correlations, flexibility and transparency of assumptions},
   author={James Greiner, D and Quinn, Kevin M},
   journal={Journal of the Royal Statistical Society: Series A (Statistics in Society)},
@@ -22,10 +23,12 @@
   title={A solution to the ecological inference problem: Reconstructing individual behavior from aggregate data},
   author={King, Gary},
   year={1997},
-  publisher={Princeton University Press}
+  publisher={Princeton University Press},
+  url={http://www.jstor.org/stable/j.ctt46n43p}
 }
 
 @article{king1999binomial,
+  doi={10.1177/0049124199028001004},
   title={Binomial-beta hierarchical models for ecological inference},
   author={King, Gary and Rosen, Ori and Tanner, Martin A},
   journal={Sociological Methods \& Research},
@@ -37,6 +40,7 @@
 }
 
 @article{wakefield2004ecological,
+  doi={10.1111/j.1467-985x.2004.02046.x},
   title={Ecological inference for 2$\times$ 2 tables},
   author={Wakefield, Jon},
   journal={Journal of the Royal Statistical Society: Series A (Statistics in Society)},
@@ -48,6 +52,7 @@
 }
 
 @article{rosen2001bayesian,
+  doi={10.1111/1467-9574.00162},
   title={Bayesian and frequentist inference for ecological inference: The {R}$\times$ {C} case},
   author={Rosen, Ori and Jiang, Wenxin and King, Gary and Tanner, Martin A},
   journal={Statistica Neerlandica},
@@ -72,6 +77,7 @@
 }
 
 @article{salvatier2016probabilistic,
+  doi={10.7717/peerj-cs.55},
   title={Probabilistic programming in {Python} using PyMC3},
   author={Salvatier, John and Wiecki, Thomas V and Fonnesbeck, Christopher},
   journal={PeerJ Computer Science},
@@ -130,10 +136,12 @@ Survey Information'},
   volume={15},
   number={1},
   pages={1593--1623},
-  year={2014}
+  year={2014},
+  url={http://jmlr.org/papers/v15/hoffman14a.html}
 }
 
 @book{BDA3,
+  doi={10.1201/b16018},
   title={Bayesian data analysis},
   author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
   year={2013},
