adding DOI for king97

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -20,6 +20,7 @@
 }
 
 @book{king1997solution,
+ doi={10.1515/9781400849208},
   title={A solution to the ecological inference problem: Reconstructing individual behavior from aggregate data},
   author={King, Gary},
   year={1997},
