adding greiner quinn and removing wakefield from overview notebook, adding io example to overview notebook

--- a/pyei/intro_notebooks/PyEI_overview.ipynb
+++ b/pyei/intro_notebooks/PyEI_overview.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "meaning-element",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,8 @@
     "from pyei.two_by_two import TwoByTwoEI\n",
     "from pyei.goodmans_er import GoodmansER\n",
     "from pyei.goodmans_er import GoodmansERBayes\n",
-    "from pyei.r_by_c import RowByColumnEI"
+    "from pyei.r_by_c import RowByColumnEI\n",
+    "from pyei.io_utils import from_netcdf, to_netcdf"
    ]
   },
   {
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "suffering-savannah",
    "metadata": {},
    "outputs": [
@@ -301,7 +302,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "unlike-baker",
    "metadata": {},
    "outputs": [],
@@ -2075,13 +2076,12 @@
     "- TwoByTwoEI\n",
     "    * `king99`\n",
     "    * `king99_pareto_modification`\n",
-    "    * `wakefield_beta` \n",
-    "    * `wakefield_normal`  (caution: sampling difficulties)\n",
     "    * `truncated_normal`\n",
     "    \n",
     "- RowByColumnEI\n",
     "    * `multinomial-dirichlet`\n",
     "    * `multinomial-dirichlet-modified`\n",
+    "    * `greiner-quinn`\n",
     "    \n",
     "- GoodmansER\n",
     "    * `is_weighted_regression=False` (not weighted by precinct populations)\n",
@@ -2843,9 +2843,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd7092e6-d53d-4513-b6a1-32a65e54148a",
+   "metadata": {},
+   "source": [
+    "## Saving and loading a fitted ei model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "static-entertainment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving\n",
+    "#to_netcdf(ei,'filepath')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ed27f829-3422-4d8c-aa38-14f1237cb33d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading\n",
+    "#ei = from_netcdf('filepath')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "static-entertainment",
+   "id": "82b5f8f4-310c-4f3d-9890-28bb89940617",
    "metadata": {},
    "outputs": [],
    "source": []
